--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,9 @@
         "forceConsistentCasingInFileNames": true,
         "outDir": "./dist",
         "rootDir": "./src",
-        "resolveJsonModule": true
+        "resolveJsonModule": true,
+        "declaration": true,  // Add this if not present
+        "declarationMap": true  // Add this if not present
     },
     "include": ["src/**/*"],
     "exclude": ["node_modules", "dist"]
